--- a/project-2/style.css
+++ b/project-2/style.css
@@ -17,18 +17,21 @@ margin: 7% 0 0 25%;
 }
 .valentine-box{
     width: 40%;
-    height: 300px;
+    height: 340px;
     background: #fff;
     margin: 20px;
     box-sizing: border-box;
     font-size: 50px;
+    box-shadow: 0 5px 10px #0005;
+
 
 }
 .valentine-smallbox{
     width: 40%;
-    height: 250px;
+    height: 300px;
     background-color: #fff;
     margin: 40px 0 0 0;
+    box-shadow: 0 5px 10px #0005;
 
 }
 .valentine-text{
@@ -47,16 +50,98 @@ word-spacing: 2px;
 .valentine-smallbox p{
     font-size: 12px;
     max-width: 80%;
-    margin: 10px 0 0 30px;
+    margin: 10px 0 0 20px;
 letter-spacing: 1px;
 }
+.valentine-smallbox label{
+    font-weight: 100;
+    font-size: 15px;
+    margin: 5px 0 0  20px;
+}
+.valentine-form-box{
+    /* padding: 0.15rem 0; */
+    display: flex;
+    flex-direction: column;
+   width: 70%;
+}
+ .valentine-form-box input{
+    flex-basis: 100%;
+   
+    border-radius: 20px;
+    margin: 10px 0 0  15px;
+
+ }
+ input[type=text] {
+    padding: 1px 0px 5px 13px;
+  }
+button{
+   padding: 0.7rem 1rem;
+   margin: 10px 0px 0px 15px;
+   border-radius: 20px;
+   border-style: none;
+   background-color: #ff3300;
+   color: #fff;
+}
+.valentine-women {
+    width: 110px;
+    margin: 30px 0 0 60px;
+}
+.valentine-woman-box{
+    background-color: #ff3300;
+}
+.valentine-container h3{
+    font-size: 30px;
+    margin: 15px 0 0 0;
+    text-align: center;
+    font-weight: 700;
+}
+.valentine-container h2{
+    font-size: 30px;
+    text-align: center;
+    margin: 20px 0 0 0;
+    font-weight: 100;
+
+}
+#valentine-btnsend1{
+    padding: 0.7rem 2rem;
+    margin: 10px 0px 0px 75px;
+    border-radius: 20px;
+    border-style: none;
+    background-color: #ff3300;
+    color: #fff;
+    font-weight: 600;
+}
+
 @media screen and (max-width: 1200px) {
+    .valentine-container{
+        padding: 0px 0px 20px;
+    }
     .valentine-box{
         width: 40%;
     }
     .valentine-smallbox{
         width: 40%;
+        height: fit-content;
+        padding: 6px;
     }
+    button{
+        padding: 0.3rem 0.3rem;
+        margin: 10px 0px 0px 15px;
+        border-radius: 20px;
+        border-style: none;
+        background-color: #ff3300;
+        color: #fff;
+     }
+     #valentine-btnsend1{
+        padding: 0.7rem 1rem;
+        margin: 7px 0px 0px 60px;
+        border-radius: 20px;
+        border-style: none;
+        background-color: #ff3300;
+        color: #fff;
+        font-weight: 600;
+    }
+     
 }
 
 @media screen and (max-width: 600px) {
@@ -65,5 +150,7 @@ letter-spacing: 1px;
     }
     .valentine-smallbox{
         width: 90%;
+        height: fit-content;
+        padding: 10px;
     }
 }
