--- a/project-1/style.css
+++ b/project-1/style.css
@@ -1,86 +1,85 @@
-
-*{
-    margin:0; padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-h4{
+h4 {
     font-size: 10px;
     margin-top: 15px;
     font-style: italic;
 }
 
-.valentinecode-banner-container{
+.valentinecode-banner-container {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.valentinecode-banner-container .valentinecode-banner{
-    background: linear-gradient(
-        to right,
-    red 45%,
-        #fff 40%,
-        #fff 100%
-      );
+.valentinecode-banner-container .valentinecode-banner {
+    background: linear-gradient(to right,
+            red 45%,
+            #fff 40%,
+            #fff 100%);
     box-sizing: border-box;
-   
-        border: 2px solid #000;
-      
-        margin: 10px;
+
+    border: 2px solid #000;
+
+    margin: 10px;
     border-radius: 5px;
-    margin:10px;
+    margin: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-  
+
     overflow: hidden;
 }
 
-.valentinecode-banner-container .valentinecode-banner .valentinecode-shoe{
-  
-    flex:1 1 250px;
-    padding:10px;
+.valentinecode-banner-container .valentinecode-banner .valentinecode-shoe {
+
+    flex: 1 1 250px;
+    padding: 10px;
     text-align: center;
 }
 
-.valentinecode-banner-container .valentinecode-banner .valentinecode-shoe img{
-    width:70%;
-  
+.valentinecode-banner-container .valentinecode-banner .valentinecode-shoe img {
+    width: 70%;
+
 }
 
-.valentinecode-banner-container .valentinecode-banner .valentinecode-content{
-  
-    flex:1 1 250px;
+.valentinecode-banner-container .valentinecode-banner .valentinecode-content {
+
+    flex: 1 1 250px;
     text-align: center;
-    padding:40px;
+    padding: 40px;
     text-transform: uppercase;
 }
 
-.valentinecode-banner-container .valentinecode-banner .valentinecode-content span{
-    color:#eee;
+.valentinecode-banner-container .valentinecode-banner .valentinecode-content span {
+    color: #eee;
     font-size: 25px;
 }
 
-.valentinecode-banner-container .valentinecode-banner .valentinecode-content h3{
- 
+.valentinecode-banner-container .valentinecode-banner .valentinecode-content h3 {
+
     font-size: 25px;
     letter-spacing: 1px;
     font-weight: 100;
-    
+
 
 }
-.valentinecode-banner-container .valentinecode-banner .valentinecode-content h5{
- 
+
+.valentinecode-banner-container .valentinecode-banner .valentinecode-content h5 {
+
     font-size: 25px;
     letter-spacing: 1px;
     font-weight: 100;
     height: 40px;
     width: 155px;
     line-height: 40px;
-    /* background: #000; */
+
     border: 2px solid #000;
     color: #000;
     margin: 5px auto;
@@ -91,20 +90,20 @@ h4{
 
 }
 
-.valentinecode-banner-container .valentinecode-banner .valentinecode-content p{
+.valentinecode-banner-container .valentinecode-banner .valentinecode-content p {
     font-size: 10px;
-    padding:20px 0;
+    padding: 20px 0;
 
 }
 
-.valentinecode-banner-container .valentinecode-banner .valentinecode-content .valentinecode-btn{
+.valentinecode-banner-container .valentinecode-banner .valentinecode-content .valentinecode-btn {
     display: block;
-    height:40px;
-    width:150px;
+    height: 40px;
+    width: 150px;
     line-height: 40px;
     background: #000;
-    color:#fff;
-    margin:5px auto;
+    color: #fff;
+    margin: 5px auto;
     text-decoration: none;
     border-radius: 30px;
     margin-top: 10px;
@@ -118,29 +117,14 @@ h4{
 
 
 @media screen and (max-width: 600px) {
-    .valentinecode-banner-container .valentinecode-banner{
-            background: linear-gradient(
-                to top,
+    .valentinecode-banner-container .valentinecode-banner {
+        background: linear-gradient(to top,
                 white 0%,
                 white 55%,
                 red 50%,
-                red 100%
-          );
-        box-sizing: border-box;
-       
-            border: 2px solid #000;
-          
-            margin: 10px;
-        border-radius: 5px;
-        margin:10px;
-        display: flex;
-        flex-direction: row;
-        /* align-items: center;
-        justify-content: center; */
-        flex-wrap: wrap;
+                red 100%);
       
-        overflow: hidden;
     }
-   
-    
+
+
 }
