--- a/project4/style.css
+++ b/project4/style.css
@@ -19,6 +19,19 @@
   justify-content: center !important;
   align-items: center !important;
 }
+/* text content */
+.valentinecode-dot {
+  margin-left: 7px !important;
+}
+.valentinecode-text-content {
+  margin-right: 10px !important;
+}
+.valentinecode-time {
+  margin-left: 10px !important;
+}
+.valentinecode-little {
+  font-size: 1vw !important;
+}
 .valentinecode-text {
   font-size: 1.2vw !important;
   color: #fff !important;
@@ -90,5 +103,11 @@
   .valentinecode-text {
     font-size: 1.9vw !important;
     color: #fff !important;
+  }
+}
+@media screen and (max-width: 300px) {
+  /* text-container */
+  .valentinecode-bar {
+    width: 80% !important;
   }
 }
