--- a/project/style.css
+++ b/project/style.css
@@ -828,3 +828,530 @@
     color: rgb(22, 177, 243) !important;
   }
 }
+
+/* index7 & index8........................................................................ */
+/* index7 & index8........................................................................ */
+/* index7 & index8........................................................................ */
+
+.valentinecode-conversioncontainer {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+.valentinecode-mainconversioncontainer {
+  margin: 10% 0 0 0 !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 100% !important;
+}
+.valentinecode-cardcontainer {
+  width: 12% !important;
+  height: 20vh !important;
+  border: solid rgb(255, 166, 165) !important;
+  border-radius: 9% !important;
+}
+.valentinecode-imgcard {
+  margin: 0 0 0 0 !important;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  width: 90% !important;
+}
+.valentinecode-longcontainer {
+  width: 21.5% !important;
+  height: 20vh !important;
+  border: solid rgb(255, 166, 165) !important;
+  margin: 0 0 0 7px !important;
+  border-radius: 9% !important;
+}
+
+.valentinecode-longcontent {
+  margin: 0 0 0 35px !important;
+}
+.valentinecode-smallcontainer {
+  display: flex !important;
+  margin: 10px 0 0 35px !important;
+}
+
+.valentinecode-donatus {
+  font-size: 1.4vw !important;
+  margin: 20px 0 0 0 !important;
+  font-weight: 600 !important;
+}
+.valentinecode-booked {
+  font-size: 1.3vw !important;
+  font-weight: 100 !important;
+  margin: 10px 0 0 0px !important;
+}
+.valentinecode-timemin {
+  font-size: 1vw !important;
+}
+.valentinecode-verifiedcontainers {
+  font-size: 1vw !important;
+  margin: 0 0 0 13px !important;
+  color: #ff3300 !important;
+}
+.valentinecode-longcontents {
+  margin: 0 0 0 35px !important;
+}
+
+@media screen and (max-width: 1200px) {
+  .valentinecode-cardcontainer {
+    width: 12% !important;
+    height: 20vh !important;
+    border: solid rgb(255, 166, 165) !important;
+    border-radius: 9% !important;
+  }
+  .valentinecode-imgcard {
+    width: 100% !important;
+  }
+  .valentinecode-donatus {
+    font-size: 1.7vw !important;
+  }
+  .valentinecode-booked {
+    font-size: 1.6vw !important;
+  }
+  .valentinecode-longcontents {
+    margin: 0 0 0 27px !important;
+  }
+  .valentinecode-longcontainer {
+    width: 23% !important;
+  }
+  .valentinecode-smallcontainer {
+    display: flex !important;
+    margin: 10px 0 0 27px !important;
+  }
+}
+@media screen and (max-width: 800px) {
+  .valentinecode-cardcontainer {
+    width: 20% !important;
+    height: 20vh !important;
+  }
+  .valentinecode-imgcard {
+    width: 102% !important;
+  }
+  .valentinecode-donatus {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-booked {
+    font-size: 1.8vw !important;
+  }
+  .valentinecode-longcontents {
+    margin: 0 0 0 37px !important;
+  }
+  .valentinecode-longcontainer {
+    width: 27% !important;
+  }
+
+  .valentinecode-smallcontainers {
+    display: flex !important;
+    margin: 10px 0 0 20px !important;
+  }
+  .valentinecode-timeminss {
+    font-size: 2vw !important;
+  }
+  .valentinecode-verifiedcontainerss {
+    font-size: 2vw !important;
+  }
+}
+@media screen and (max-width: 600px) {
+  .valentinecode-cardcontainer {
+    width: 20% !important;
+    height: 17vh !important;
+  }
+  .valentinecode-imgcard {
+    width: 100% !important;
+  }
+  .valentinecode-donatus {
+    font-size: 2.4vw !important;
+  }
+  .valentinecode-booked {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-longcontents {
+    margin: 0 0 0 29px !important;
+  }
+  .valentinecode-longcontainer {
+    width: 47% !important;
+    height: 17vh !important;
+  }
+  .valentinecode-smallcontainer {
+    display: flex !important;
+    margin: 10px 0 0 17px !important;
+  }
+  .valentinecode-timeminss {
+    font-size: 2.4vw !important;
+  }
+  .valentinecode-verifiedcontainerss {
+    font-size: 2.4vw !important;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .valentinecode-cardcontainer {
+    width: 20% !important;
+    height: 13.5vh !important;
+  }
+  .valentinecode-imgcard {
+    width: 103% !important;
+    margin: 10px 0 !important;
+  }
+  .valentinecode-donatus {
+    font-size: 3.2vw !important;
+  }
+  .valentinecode-booked {
+    font-size: 3.2vw !important;
+  }
+  .valentinecode-longcontent {
+    margin: 0 0 0 17px !important;
+  }
+  .valentinecode-longcontainer {
+    width: 45% !important;
+    height: 14vh !important;
+  }
+  .valentinecode-smallcontainer {
+    display: flex !important;
+    margin: 10px 0 0 17px !important;
+  }
+  .valentinecode-timemin {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-verifiedcontainers {
+    font-size: 2.2vw !important;
+  }
+}
+@media screen and (max-width: 300px) {
+  .valentinecode-cardcontainer {
+    width: 27% !important;
+    height: 13.5vh !important;
+  }
+  .valentinecode-imgcard {
+    width: 103% !important;
+    margin: 10px 0 !important;
+  }
+  .valentinecode-donatus {
+    font-size: 4vw !important;
+  }
+  .valentinecode-booked {
+    font-size: 4vw !important;
+  }
+  .valentinecode-longcontent {
+    margin: 0 0 0 17px !important;
+  }
+  .valentinecode-longcontainer {
+    width: 55% !important;
+    height: 14vh !important;
+  }
+  .valentinecode-smallcontainer {
+    display: flex !important;
+    margin: 10px 0 0 17px !important;
+  }
+  .valentinecode-timemin {
+    font-size: 2.7vw !important;
+  }
+  .valentinecode-verifiedcontainers {
+    font-size: 2.7vw !important;
+  }
+}
+
+/* index8............................................................... */
+/* index8............................................................... */
+/* index8............................................................... */
+.valentinecode-buttonconversion {
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-top: 10px;
+
+  /* width: 100%; */
+}
+.valentinecode-longcontainers {
+  width: 21.5% !important;
+  height: 22vh !important;
+  border: solid rgb(255, 166, 165) !important;
+  margin: 0 0 0 7px !important;
+  border-radius: 9% !important;
+}
+.valentinecode-timeminss {
+  font-size: 1vw !important;
+}
+.valentinecode-verifiedcontainerss {
+  font-size: 1vw !important;
+  margin: 0 0 0 13px !important;
+  color: #ff3300 !important;
+}
+.valentinecode-smallcontainerss {
+  display: flex !important;
+  margin: 2px 0 0 0 !important;
+}
+.valentinecode-cardcontainers {
+  width: 12% !important;
+  height: 22vh !important;
+  border: solid rgb(255, 166, 165) !important;
+  border-radius: 9% !important;
+}
+.valentinecode-imgcards {
+  margin: 0 0 0 0 !important;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  width: 90% !important;
+}
+.valentinecode-buttonconversion {
+  width: 50%;
+  border: none;
+  background-color: #ff3300 !important;
+  height: 3vh;
+  border-radius: 8%;
+  color: #fff;
+}
+@media screen and (max-width: 1200px) {
+  .valentinecode-cardcontainers {
+    width: 12% !important;
+    height: 20vh !important;
+    border: solid rgb(255, 166, 165) !important;
+    border-radius: 9% !important;
+  }
+
+  .valentinecode-longcontainers {
+    width: 23% !important;
+  }
+  .valentinecode-smallcontainerss {
+    margin: 2px 0 0 2px !important;
+  }
+  .valentinecode-cardcontainers {
+    width: 15% !important;
+    height: 22vh !important;
+    border: solid rgb(255, 166, 165) !important;
+    border-radius: 9% !important;
+  }
+  .valentinecode-imgcard {
+    width: 30% !important;
+  }
+}
+@media screen and (max-width: 800px) {
+  .valentinecode-cardcontainers {
+    width: 15% !important;
+    height: 20vh !important;
+  }
+  .valentinecode-imgcard {
+    width: 102% !important;
+  }
+  .valentinecode-donatus {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-booked {
+    font-size: 1.8vw !important;
+  }
+  /* .valentinecode-longcontent {
+    margin: 0 0 0 20px !important;
+  } */
+  .valentinecode-longcontainers {
+    width: 32% !important;
+    height: 20vh !important;
+  }
+  .valentinecode-smallcontainerss {
+    display: flex !important;
+    margin: 1px 0 0 20px !important;
+  }
+  .valentinecode-timeminss {
+    font-size: 1.4vw !important;
+  }
+  .valentinecode-verifiedcontainerss {
+    font-size: 1.4vw !important;
+  }
+  .valentinecode-imgcards {
+    width: 80% !important;
+  }
+  .valentinecode-cardcontainers {
+    width: 20% !important;
+    height: vh !important;
+    border: solid rgb(255, 166, 165) !important;
+    border-radius: 9% !important;
+  }
+  .valentinecode-imgcard {
+    width: 90% !important;
+  }
+}
+@media screen and (max-width: 600px) {
+  .valentinecode-cardcontainers {
+    width: 22% !important;
+    height: 18vh !important;
+  }
+  .valentinecode-imgcard {
+    width: 100% !important;
+  }
+  .valentinecode-donatus {
+    font-size: 3vw !important;
+    margin: 10px 0 0 0 !important;
+  }
+  .valentinecode-longcontainers {
+    width: 32% !important;
+    height: 20vh !important;
+  }
+  .valentinecode-smallcontainerss {
+    display: flex !important;
+    margin: 0px 0 0 0px !important;
+  }
+  .valentinecode-timeminss {
+    font-size: 1.4vw !important;
+  }
+  .valentinecode-verifiedcontainerss {
+    font-size: 1.4vw !important;
+  }
+
+  .valentinecode-booked {
+    font-size: 2.8vw !important;
+    margin: 5px 0 0 0 !important;
+  }
+  .valentinecode-longcontent {
+    margin: 0 0 0 17px !important;
+  }
+  .valentinecode-longcontainers {
+    width: 44% !important;
+    height: 19vh !important;
+  }
+  .valentinecode-smallcontainers {
+    display: flex !important;
+    margin: 10px 0 0 37px !important;
+  }
+  .valentinecode-timeminss {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-verifiedcontainerss {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-imgcards {
+    margin: 0 0 0 0 !important;
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 87% !important;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .valentinecode-cardcontainers {
+    width: 29% !important;
+    height: 15vh !important;
+  }
+  .valentinecode-imgcard {
+    width: 100% !important;
+  }
+  .valentinecode-donatus {
+    font-size: 3vw !important;
+    margin: 10px 0 0 0 !important;
+  }
+
+  .valentinecode-smallcontainerss {
+    display: flex !important;
+    margin: 0px 0 0 0px !important;
+  }
+  .valentinecode-timeminss {
+    font-size: 1.4vw !important;
+  }
+  .valentinecode-verifiedcontainerss {
+    font-size: 1.4vw !important;
+  }
+
+  .valentinecode-booked {
+    font-size: 2.8vw !important;
+    margin: 5px 0 0 0 !important;
+  }
+  .valentinecode-longcontents {
+    margin: 0 0 0 37px !important;
+  }
+
+  .valentinecode-smallcontainers {
+    display: flex !important;
+    margin: 10px 0 0 37px !important;
+  }
+  .valentinecode-timeminss {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-verifiedcontainerss {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-imgcards {
+    margin: 0 0 0 0 !important;
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 87% !important;
+  }
+  .valentinecode-longcontainers {
+    width: 54% !important;
+    height: 15vh !important;
+    padding: 0%;
+  }
+  .valentinecode-buttonconversion {
+    margin: 5px 0 0 0;
+    width: 40%;
+  }
+  .valentinecode-now {
+    font-size: 2vw;
+  }
+}
+@media screen and (max-width: 300px) {
+  .valentinecode-cardcontainers {
+    width: 29% !important;
+    height: 13vh !important;
+  }
+  .valentinecode-imgcard {
+    width: 100% !important;
+  }
+  .valentinecode-donatus {
+    font-size: 3vw !important;
+    margin: 10px 0 0 0 !important;
+  }
+
+  .valentinecode-smallcontainerss {
+    display: flex !important;
+    margin: 0px 0 0 0px !important;
+  }
+  .valentinecode-timeminss {
+    font-size: 1.4vw !important;
+  }
+  .valentinecode-verifiedcontainerss {
+    font-size: 1.4vw !important;
+  }
+
+  .valentinecode-booked {
+    font-size: 2.8vw !important;
+    margin: 5px 0 0 0 !important;
+  }
+  .valentinecode-longcontents {
+    margin: 0 0 0 30px !important;
+  }
+
+  .valentinecode-smallcontainers {
+    display: flex !important;
+    margin: 10px 0 0 30px !important;
+  }
+  .valentinecode-timeminss {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-verifiedcontainerss {
+    font-size: 2.1vw !important;
+  }
+  .valentinecode-imgcards {
+    margin: 0 0 0 0 !important;
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 87% !important;
+  }
+  .valentinecode-longcontainers {
+    width: 54% !important;
+    height: 13vh !important;
+    padding: 0%;
+  }
+  .valentinecode-buttonconversion {
+    margin: 5px 0 0 0;
+    width: 40%;
+  }
+  .valentinecode-now {
+    font-size: 2vw;
+  }
+}
