--- a/project/style.css
+++ b/project/style.css
@@ -1348,10 +1348,116 @@
     padding: 0%;
   }
   .valentinecode-buttonconversion {
-    margin: 5px 0 0 0;
-    width: 40%;
+    margin: 5px 0 0 0 !important;
+    width: 40% !important;
   }
   .valentinecode-now {
-    font-size: 2vw;
+    font-size: 2vw !important;
+  }
+}
+
+/* index9 ..................................................................*/
+/* index9 ................................................................... */
+.valentinecode-bigcontainers {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  margin: 10% 0 0 0 !important;
+}
+.valentinecode-maincontainers {
+  width: 27% !important;
+  height: 45vh !important;
+  border: 2px solid #000 !important;
+}
+.valentinecode-maindiv {
+  width: 100% !important;
+  height: 22.5vh !important;
+  background-color: #fff !important;
+}
+.valentinecode-main-Image {
+  width: 50% !important;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+.valentinecode-seconddiv {
+  width: 100% !important;
+  height: 22.5vh !important;
+  background-color: rgb(228, 57, 91) !important;
+}
+.valentinecode-bigcontainertext {
+  text-align: center !important;
+  color: white !important;
+  font-size: 1.7vw !important;
+  font-weight: bold !important;
+  width: 100% !important;
+  padding: 5% 0 !important;
+}
+.valentincode-bordertext {
+  text-align: center !important;
+  width: 100% !important;
+  font-size: 1.1vw !important;
+  font-weight: 700 !important;
+  color: rgb(113, 115, 170) !important;
+}
+
+.valentinecode-border {
+  width: 70% !important;
+  height: 8% !important;
+
+  background-color: #fff !important;
+  margin: 3% 0 0 0 !important;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  border-radius: 10%;
+  padding: 9px 0;
+}
+
+@media screen and (max-width: 800px) {
+  .valentinecode-main-Image {
+    width: 70% !important;
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .valentinecode-main-Image {
+    width: 65% !important;
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
+  .valentinecode-maincontainers {
+    width: 39% !important;
+  }
+  .valentinecode-bigcontainertext {
+    font-size: 2.7vw !important;
+  }
+  .valentincode-bordertext {
+    font-size: 1.9vw !important;
+  }
+  .valentinecode-border {
+    width: 85% !important;
+    height: 8% !important;
+
+    padding: 10px 0 !important;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .valentinecode-maincontainers {
+    width: 60% !important;
+  }
+  .valentinecode-main-Image {
+    width: 60% !important;
+  }
+  .valentinecode-bigcontainertext {
+    font-size: 4vw !important;
+  }
+  .valentincode-bordertext {
+    font-size: 3vw !important;
   }
 }
